      +  static method new : IO::File ($file_name : string = undef, $open_mode : object of string|Int = undef, $perm : int = 0);
      
      -  method open : void ($file_name : string, $open_mode : string);
      +  method open : int ($file_name : string, $open_mode : object of string|Int, $perm : int = 0);
    
0.207 2023-09-04
  [Prerequirement Changes]
    * Require SPVM::Sys 0.486.
    * Require SPVM 0.989040.
  [New Features]
    * The IO::Socket::UNIX class is added.
  [Changes]
    * The implementation of fileno method is improved.
    
  [Incompatibe Changes]
    * input_output_number is incremented.
    * The following fields and methods in the IO::Socket class are added, deleted, or changed.
      
      -  has timeout : protected ro int;
      +  has Timeout : protected int;
      +  method timeout : int ();
      
      -  has sockdomain : protected ro int;
      +  has Domain : protected int;
      +  method sockdomain : int ();
      
      -  has socktype : protected ro int;
      +  has Type : protected int;
      +  method socktype : int ();
      
      -  has protocol : protected ro int;
      +  has Proto : protected ro int;
      +  method protocol : int ();
      
      -  has listen_backlog : protected int;
      +  has Listen : protected int;
      
      -  method peerport : int ();
      -  method peerhost : string ();
      
      -  has peername : protected ro Sys::Socket::Sockaddr;
      +  has peername : protected Sys::Socket::Sockaddr;
      +  method peername : Sys::Socket::Sockaddr ();
    
    * The following fields and methods in the IO::File class are added, deleted, or changed.
    
      + method input_line_number : long ();
      
      + method set_input_line_number : void ($input_line_number : long);
      + method truncate : int ($legnth : long);
      + method stat : Sys::IO::Stat ();
      + method sync : int ();
      - method opened : int ();
      