@@ -184,52 +184,22 @@ class IO::File extends IO::Handle {
   
   method write : int ($string : string, $length : int = -1, $offset : int = 0) {
     
-    unless ($string) {
-      die "\$string must be defined.";
-    }
-    
-    unless ($offset >= 0) {
-      die "\$offset must be greater than or equal to 0.";
-    }
-    
-    my $string_length = length $string;
-    
-    if ($length < 0) {
-      $length = $string_length - $offset;
-    }
-    
-    unless ($offset + $length <= $string_length) {
-      die "\$offset + \$length must be lower than or equal to the length of \$string.";
-    }
+    my $write_string = Fn->substr($string, $offset, $length);
     
     my $stream = $self->{stream};
     
-    return Sys::IO->fwrite($string, 1, $length, $stream);
+    my $success = Sys->print($stream, $write_string);
+    
+    return $success;
   }
   
   method read : int ($string : mutable string, $length : int = -1, $offset : int = 0) {
     
-    unless ($string) {
-      die "\$string must be defined.";
-    }
-    
-    unless ($offset >= 0) {
-      die "\$offset must be greater than or equal to 0.";
-    }
-    
-    my $string_length = length $string;
-    
-    if ($length < 0) {
-      $length = $string_length - $offset;
-    }
-    
-    unless ($offset + $length <= $string_length) {
-      die "\$offset + \$length must be lower than or equal to the length of \$string.";
-    }
-    
     my $stream = $self->{stream};
     
-    return Sys::IO->fread($string, 1, $length, $stream);
+    my $read_length = Sys->read($stream, $string, $length, $offset);
+    
+    return $read_length;
   }
   
 }
